syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "etwMessages.proto";

package KdSoft.EtwLogging;

// The EtwListener service definition.
service EtwListener {
  rpc OpenSession (OpenEtwSession) returns (EnableProvidersResult);
  rpc CloseSession (CloseEtwSession) returns (google.protobuf.Empty);
  rpc GetActiveSessionNames (google.protobuf.Empty) returns (SessionNamesResult);
  rpc GetSession (google.protobuf.StringValue) returns (EtwSession);
  rpc EnableProviders (EnableProvidersRequest) returns (EnableProvidersResult);
  rpc DisableProviders (DisableProvidersRequest) returns (google.protobuf.Empty);
  rpc GetEvents (EtwEventRequest) returns (stream EtwEventBatch);
  rpc StopEvents (google.protobuf.StringValue) returns (google.protobuf.Empty);
  rpc SetCSharpFilter(SetFilterRequest) returns (BuildFilterResult);
  rpc TestCSharpFilter(TestFilterRequest) returns (BuildFilterResult);
}
